# aoc2022

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  README.md  pyproject.toml
day01/: day01.py
src/aoc2022/: .env.example  __init__.py  cli.py
src/aoc2022/day00/: part1.py  part2.py
src/aoc2022/day01/: part1.py
src/aoc2022/day02/: part1.py  part2.py
src/aoc2022/day03/: part1.py  part2.py
src/aoc2022/day04/: part1.py  part2.py
src/aoc2022/day05/: part1.py  part2.py
src/aoc2022/day06/: part1.py  part2.py
src/aoc2022/day07/: part1.py  part2.py
src/aoc2022/day08/: part1.py  part2.py
src/aoc2022/day09/: part1.py  part2.py
src/aoc2022/day10/: part1.py  part2.py
src/aoc2022/day11/: part1.py  part2.py
src/aoc2022/day12/: part1.py  part2.py
src/aoc2022/day13/: part1.py  part2.py
src/aoc2022/day14/: part1.py  part2.py
src/aoc2022/day15/: part1.py  part2.py
src/aoc2022/day16/: part1.py  part2.py
src/aoc2022/day17/: part1.py  part2.py
src/aoc2022/day18/: part1.py
src/aoc2022/utils/: point.py
