[project]
authors = [
  {name = "Tyler Baur", email = "tbaur@teuteberg.com"},
]
dependencies = [
    "httpx>=0.23.1",
    "rich>=12.6.0",
    "pytest>=7.2.0",
]
description = ""
license = {text = "MIT"}
name = ""
requires-python = ">=3.11"
version = ""

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517>=1.0.0"]

[tool.pdm]

[mypy]
