[project]


name = "aoc2022"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Tyler Baur", email = "tbaur@teuteberg.com" }]
dependencies = [
    "httpx>=0.24.1",
    "rich>=13.5.2",
    "pytest>=7.4.0",
    "pre-commit>=3.3.3",
    "typer>=0.9.0",
    "sh>=1.14.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
aoc = 'aoc2022.cli:app'
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
